--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="boton">#00DAB3</color>
+    <color name="background">#191919</color>
+    <color name="link">#3988FF</color>
 </resources>
